fix css issue on safari browser

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -76,6 +76,7 @@
 @layer utilities {
   .flip-card {
     perspective: 1000px;
+    -webkit-perspective: 1000px;
     min-height: 100%;
     width: 100%;
   }
@@ -87,6 +88,7 @@
     min-height: 100%;
     transition: transform 0.6s;
     transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
     display: flex;
     flex-direction: column;
   }
@@ -101,7 +103,11 @@
     height: 100%;
     min-height: 100%;
     backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden !important;
+    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
+    transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
     display: flex;
     flex-direction: column;
   }
@@ -114,7 +120,8 @@
   .flip-card-back {
     background-color: white;
     color: black;
-    transform: rotateY(180deg);
+    transform: rotateY(180deg) translateZ(0);
+    -webkit-transform: rotateY(180deg) translateZ(0);
     position: absolute;
     top: 0;
     left: 0;
